# openrun

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_flow.py
src/openrun/: __init__.py  events.py
src/openrun/core/: __init__.py  interpolation.py  output.py  state.py  types.py
src/openrun/flow/: __init__.py  edge.py  flow.py  runner.py
src/openrun/steps/: __init__.py  base.py
src/openrun/steps/execution/: __init__.py  conditional.py  conversation.py  delay.py  reply.py  request.py  set_state.py  switch.py
src/openrun/steps/triggers/: __init__.py  event.py  schedule.py  webhook.py
src/openrun/validation/: __init__.py  security.py  validator.py
tests/: conftest.py  test_flow.py  test_interpolation.py  test_package.py  test_runner.py  test_state.py  test_validation.py
tests/steps/: __init__.py  test_conditional.py  test_delay.py  test_request.py  test_set_state.py  test_switch.py  test_triggers.py
